Revert "Update line height to fix button text alignment"
This reverts commit 1573cc8b1b753046024854cc8012c9810f7e27a2.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,10 @@
-:root {
-  line-height: 1.35;
+@media screen and (min-width: 768px) {
+  :root {
+    font-size: 0.9375rem;
+  }
+}
 
+:root {
   --background: 236 239 244;
   --background-light: 248 250 252;
   --background-lighter: 236 239 244;
@@ -60,13 +64,6 @@ html,
 body {
   @apply font-sans;
   @apply text-base;
-}
-
-@media screen and (min-width: 768px) {
-  :root {
-    font-size: 0.9375rem;
-    line-height: 1.4;
-  }
 }
 
 #pwa-install {
